# metrics

./: Argentinean Crypto Projects.csv  Crypto Startup Founders Responses.csv  README.md  argentinian_tvl.py  clean_founder_form.ipynb  crecimiento_vc_responses.csv  frontend.py  get_dune.py  nombre_del_archivo.csv  pyproject.toml  requirements.txt
.ipynb_checkpoints/: clean_founder_form-checkpoint.ipynb
protocols/: decentraland.py  exactly.py  poap.py
