[tool.poetry]
name = "metrics"
version = "0.1.0"
description = ""
authors = ["tadeo <94108039+tadeongmi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.19.0"
streamlit = "^1.35.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
